brand info added

--- a/index.html
+++ b/index.html
@@ -36,5 +36,29 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="brand-area-container">
+            <div class="brand-info">
+                <div class="alibaba">
+                    <img src="logos/Alibaba.svg" alt="">
+                </div>
+                <div class="amazon">
+                    <img src="logos/Amazon.svg" alt="">
+                </div>
+                <div class="amazon1">
+                    <img src="logos/Daraz.pk Logo.svg" alt="">
+                </div>
+                <div class="eby">
+                    <img src="logos/Rakuten.svg" alt="">
+                </div>
+                <div class="amazon2">
+                    <img src="logos/Target.svg" alt="">
+                </div>
+                <div class="amazon3">
+                    <img src="logos/Walmart.svg" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
