--- a/index.html
+++ b/index.html
@@ -59,6 +59,120 @@
                 </div>
             </div>
         </section>
+        <section class="collection-container">
+            <h2 class="collection-title">Popular Collection</h2>
+            <div class="collection-containers">
+                <div class="collection">
+                    <img src="images/1.jpg" alt="">
+                    <h3 class="collection-name" >HD Camera</h3>
+                    <p class="collection-price">$50.84</p>
+                    <p class="rating">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"> 4.99 Rating</i>
+                    </p>
+                </div>
+                <div class="collection">
+                    <img src="images/1.jpg" alt="">
+                    <h3 class="collection-name" >HD Camera</h3>
+                    <p class="collection-price">$50.84</p>
+                    <p class="rating">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"> 4.99 Rating</i>
+                    </p>
+                </div>
+                <div class="collection">
+                    <img src="images/1.jpg" alt="">
+                    <h3 class="collection-name" >HD Camera</h3>
+                    <p class="collection-price">$50.84</p>
+                    <p class="rating">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"> 4.99 Rating</i>
+                    </p>
+                </div>
+                <div class="collection">
+                    <img src="images/1.jpg" alt="">
+                    <h3 class="collection-name" >HD Camera</h3>
+                    <p class="collection-price">$50.84</p>
+                    <p class="rating">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"> 4.99 Rating</i>
+                    </p>
+                </div>
+                <div class="collection">
+                    <img src="images/1.jpg" alt="">
+                    <h3 class="collection-name" >HD Camera</h3>
+                    <p class="collection-price">$50.84</p>
+                    <p class="rating">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"> 4.99 Rating</i>
+                    </p>
+                </div>
+                <div class="collection">
+                    <img src="images/1.jpg" alt="">
+                    <h3 class="collection-name" >HD Camera</h3>
+                    <p class="collection-price">$50.84</p>
+                    <p class="rating">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"> 4.99 Rating</i>
+                    </p>
+                </div>
+                <div class="collection">
+                    <img src="images/1.jpg" alt="">
+                    <h3 class="collection-name" >HD Camera</h3>
+                    <p class="collection-price">$50.84</p>
+                    <p class="rating">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"> 4.99 Rating</i>
+                    </p>
+                </div>
+                <div class="collection">
+                    <img src="images/1.jpg" alt="">
+                    <h3 class="collection-name" >HD Camera</h3>
+                    <p class="collection-price">$50.84</p>
+                    <p class="rating">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"> 4.99 Rating</i>
+                    </p>
+                </div>
+                <div class="collection">
+                    <img src="images/1.jpg" alt="">
+                    <h3 class="collection-name" >HD Camera</h3>
+                    <p class="collection-price">$50.84</p>
+                    <p class="rating">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"> 4.99 Rating</i>
+                    </p>
+                </div>
+            </div>
+        </section>
+    
     </main>
 </body>
 </html>
